--- a/package.json
+++ b/package.json
@@ -13,13 +13,22 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "cookie": "^0.5.0",
+    "encoding": "^0.1.13",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "ethers": "^6.6.1",
+    "firebase": "^9.23.0",
+    "firebase-admin": "^11.9.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/cookie": "^0.5.1"
   }
 }
