--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "classnames": "^2.3.2",
     "cookie": "^0.5.0",
     "encoding": "^0.1.13",
     "eslint": "8.43.0",
@@ -20,11 +21,13 @@
     "ethers": "^6.6.1",
     "firebase": "^9.23.0",
     "firebase-admin": "^11.9.0",
+    "framer-motion": "^10.12.18",
     "jsonwebtoken": "^9.0.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
