--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase-admin": "^11.9.0",
     "framer-motion": "^10.12.18",
     "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
