--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "react-dom": "18.2.0",
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/cookie": "^0.5.1"
+    "@types/cookie": "^0.5.1",
+    "@types/uuid": "^9.0.2"
   }
 }
